<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="cz.utb.fai.projectapp.viewModel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainViewActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/animationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SettingsButton" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/received_message_background"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/QuestionField"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/typing_animation"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/QuestionField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edittext_background"
            android:backgroundTintMode="src_in"
            android:ems="10"
            android:hint="@string/QuestionField"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@={ viewModel.questionMutable}"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SendButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/SendButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/SearchButton"
            android:onClick="@{ () -> viewModel.chatCompletion(context)}"
            android:src="@drawable/send_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="@+id/QuestionField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/QuestionField" />

        <ImageButton
            android:id="@+id/SettingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/SettingsButton"
            android:onClick="@{ () -> viewModel.toSettings() }"
            android:src="@drawable/icons8_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>